--- a/CSS/custom2.css
+++ b/CSS/custom2.css
@@ -171,6 +171,45 @@ span{
 
 
 
+@media (max-width: 800px) {
+
+
+#cards{
+    width: 100%;
+    height: 20%;
+    background: rgba(255, 0, 0, 0);
+    
+    border-radius: 5%;
+    margin-top: 20%;
+    display:  flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#cBody{
+    justify-content: center;
+}
+
+
+#card{
+    margin-top: 20%;
+}
+
+#carousel{
+    margin-top: 30%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#carouselId{
+    width: 80%;
+}
+  }
+
+
 @keyframes BGgradient { /* KEY FRAME, Animacion de fondo */
 	0% {
 		background-position: 0% 150%;
@@ -187,27 +226,5 @@ span{
         color: rgba(0, 0, 0, 0.77);
         font-weight: bold;
 	}
-}
 
-@keyframes textSize { /* KEY FRAME, Animacion de fondo */
-	0% {
-        font-size: 1em;
-        font-weight: bold;
-	}
-    25% {
-        font-size: 1.2em;
-        font-weight: 100;
-	}
-	50% {
-        font-size: 1em;
-        font-weight: bold;
-	}  
-    75% {
-        font-size: 1.2em;
-        font-weight: 100;
-    }
-	100% {
-		font-size: 1em;
-        font-weight: bold;
-	}
 }
