--- a/CSS/custom2.css
+++ b/CSS/custom2.css
@@ -68,13 +68,13 @@ nav{
 }
 
 #cards{
-    width: 100%;
-    height: 30%;
+    width: 50%;
+    height: 20%;
     background: rgba(255, 0, 0, 0);
     border-radius: 5%;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     align-items: center;
 }
 
@@ -122,7 +122,7 @@ span{
 }
 
 #carousel{
-    margin-top: 5%;
+    margin-top: 0%;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -173,6 +173,11 @@ span{
 
 @media (max-width: 800px) {
 
+    nav{
+        align-items: center;
+        justify-content: center;
+    }
+
 
 #cards{
     width: 100%;
@@ -180,7 +185,7 @@ span{
     background: rgba(255, 0, 0, 0);
     
     border-radius: 5%;
-    margin-top: 20%;
+    margin: 60% 0;
     display:  flex;
     flex-direction: column;
     align-items: center;
@@ -193,11 +198,12 @@ span{
 
 
 #card{
-    margin-top: 20%;
+    width: 100%;
+    margin: 20% 0;
 }
 
 #carousel{
-    margin-top: 30%;
+    padding-top: 30%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -205,7 +211,7 @@ span{
     align-items: center;
 }
 #carouselId{
-    width: 80%;
+    width: 100%;
 }
   }
 
